examples/test/testpolicy4701.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4701
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key20: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value45
          key48: value27
          key37: value49
      podSelector:
        matchLabels:
          key16: value34
